@@ -10,7 +10,7 @@ cat >$TMP/myprofile <<EOF
 EOF
 
 printf "Test that the @complain keyword works"
-if $L appid myprofile /bin/ls / >/dev/null; then
+if $L snap.name.app myprofile /bin/ls / >/dev/null; then
     PASS
 else
     FAIL
